Fixed tabs to fit on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,11 @@ mat-card {
   min-width: 80%;
 }
 
+.mat-tab-link {
+  padding: 0 !important;
+  min-width: 100px !important;
+}
+
 button[mat-fab] {
   position: fixed;
   bottom: 2rem;
